# mnxdocgenerator

./: .gitignore  README.md  pyproject.toml
spectools/: __init__.py  models.py  views.py
spectools/management/commands/: makesite.py  validate_json.py
spectools/migrations/: 0035_exampledocument_document_path_and_more.py  0036_jsonobject_uses_global_attrs.py  0037_xmlschema_version_alter_datatype_union_types.py  0038_jsonobject_regex.py
spectools/templates/: data_type_detail.html  homepage.html  homepage_musicxml.html  json_object_detail.html
spectools/utils/: datautils.py  htmlutils.py  jsonschema.py
