[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "spectools"
authors = [{name = "Adrian Holovaty", email = "adrian@holovaty.com"}]
readme = "README.md"
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/w3c-cg/mnxdocgenerator"
